Overflow-x: scroll on pre tags to fix page expansion with large definitions

--- a/static/shared.css
+++ b/static/shared.css
@@ -33,3 +33,7 @@ a {
     font-style: italic;
     font-weight: bold;
 }
+
+pre {
+    overflow-x: scroll;
+}
